<resources>
    <string name="app_name">JOBrowser</string>
    <string name="create_post">Create Post</string>
    <string name="get_posts">Get Posts</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register" translatable="false">Register</string>
    <string name="btn_register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Username</string>

    <string name="business">Business</string>
    <string name="worker">Worker</string>
    <string name="user_type">User Type:</string>
    <string name="passwords_not_match">passwords do not match</string>
    <string name="password_6_letters">Password must contain atleast six characters</string>
    <string name="user_type_not_checked">User type is not checked</string>
    <string name="post_uploaded">Post uploaded successfully!</string>
    <string name="email_exist">Email address already exists</string>

    <string name="welcome" translatable="false">Welcome</string>
    <string name="business_name">Business Name (required):</string>
    <string name="logo_link">Logo Link:</string>
    <string name="business_locations">Locations of Business:</string>
    <string name="office">Office</string>
    <string name="lab">Laboratory</string>
    <string name="factory">Factory</string>
    <string name="work_home">Work from Home</string>


    <string name="description">Description of Business:</string>
    <string name="contact">Contacts:</string>
    <string name="create_profile">Create Profile</string>
    <string name="name_required">Business name is required</string>
    <string name="sign_up_successfully">Signed up successfully</string>
    <string name="email_or_password">Email or password do not exist</string>

    <string name="first_name">First Name (required):</string>
    <string name="last_name">Last Name (required):</string>
    <!--    <string name="age">Age:</string>-->
    <!--    <string name="residential_area">Residential Area:</string>-->


    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="upload">Upload</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>

    <string name="Open" translatable="false">Open</string>
    <string name="Close" translatable="false">Close</string>


</resources>