<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterFragment"
    android:layout_gravity="start">

<!--    <TextView-->
<!--        android:id="@+id/tv_logo"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/register"-->
<!--        android:textSize="50sp"-->
<!--        android:layout_marginStart="25dp"-->
<!--        android:layout_marginBottom="5dp"-->
<!--        android:fontFamily="@font/indigo_daisy"-->
<!--        android:layout_marginTop="60dp"-->
<!--        />-->

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/indigo_daisy"
        android:textColor="@color/colorPrimary"
        android:gravity="left"
        android:text="@string/register"
        android:textSize="70sp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textAlignment="center"
        android:textSize="15sp" />

<!--    <EditText-->
<!--        android:id="@+id/et_email"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp"-->
<!--        android:hint="@string/e_mail"-->
<!--        android:layout_marginLeft="20dp"-->
<!--        android:layout_marginRight="20dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:padding="15dp"-->
<!--        android:fontFamily="@font/roboto_regular"-->
<!--        android:inputType="textEmailAddress"-->
<!--        android:background="@drawable/et_custom"-->
<!--        android:textSize="15sp" />-->

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="textPassword"
        android:background="@drawable/et_custom"
        android:textSize="15sp"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/repassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/re_type_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="textPassword"
        android:background="@drawable/et_custom"
        android:textSize="15sp"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/not_match"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginStart="20dp"
        android:text="@string/passwords_not_match"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/user_type"
        android:textColor="@color/light_grey"
        android:textSize="20sp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="30dp">
        <RadioButton
            android:id="@+id/worker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/worker"
            android:textColor="@color/light_grey"
            android:buttonTint="@color/colorPrimary"

            />
        <RadioButton
            android:id="@+id/business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business"
            android:textColor="@color/light_grey"
            android:buttonTint="@color/colorPrimary"

            />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_custom"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@android:color/white" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_left"
            android:layout_above="@id/swipeLeft"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/swipeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_right_for_login"
            android:textSize="15sp"
            android:fontFamily="@font/roboto_regular"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"/>

    </RelativeLayout>

</LinearLayout>