<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/indigo_daisy"
                    android:gravity="left"
                    android:text="@string/app_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="70sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/tv_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/email"
                    android:layout_marginStart="25dp"
                    android:layout_marginBottom="50dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_above="@id/password"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/et_custom"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/et_custom"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/btn_custom"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/login"
                    android:textColor="@android:color/white" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="180dp"
                    android:layout_marginTop="45dp"
                    android:layout_marginRight="180dp"
                    android:src="@drawable/ic_arrow_right" />

                <TextView
                    android:id="@+id/swipeRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="120dp"
                    android:layout_marginRight="120dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/swipe_left_for_register"
                    android:textSize="15sp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>