<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateWorkerProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textSize="60sp"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/indigo_daisy"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    />

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    />

                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    />


<!--                <TextView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/last_name"-->
<!--                    android:textSize="20sp"-->
<!--                    android:layout_marginStart="10dp"-->
<!--                    android:layout_marginTop="10dp"-->
<!--                    />-->

<!--                <EditText-->
<!--                    android:id="@+id/last_name"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="20dp"-->
<!--                    android:layout_marginEnd="20dp"-->
<!--                    />-->


                <Button
                    android:id="@+id/create_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/btn_custom"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/create_profile"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>